--- a/app/TaskLoco/Base.lproj/Main.storyboard
+++ b/app/TaskLoco/Base.lproj/Main.storyboard
@@ -2501,7 +2501,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MWS-hU-8ho">
-                                <rect key="frame" x="64" y="752" width="286" height="45"/>
+                                <rect key="frame" x="290" y="752" width="60" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="OBO-x5-LTf"/>
                                 </constraints>
@@ -2542,13 +2542,28 @@
                                     <constraint firstAttribute="height" constant="1" id="L1L-6X-mlt"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rfU-Ch-eRC">
+                                <rect key="frame" x="50" y="752" width="314" height="45"/>
+                                <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="20"/>
+                                <state key="normal" title="Delete">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="deleteProject:" destination="bpj-0o-Kbi" eventType="touchUpInside" id="upx-Hy-SFj"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="NLs-Sd-Mjm" firstAttribute="bottom" secondItem="59o-jA-b21" secondAttribute="bottom" constant="10" id="1F9-4x-Pfh"/>
                             <constraint firstItem="Trh-Dw-WJl" firstAttribute="bottom" secondItem="fse-1X-DXF" secondAttribute="bottom" constant="10" id="1oF-Kq-U0P"/>
                             <constraint firstItem="1zh-YK-BXd" firstAttribute="trailing" secondItem="wJ9-iI-z24" secondAttribute="trailing" id="2Ya-uX-Doe"/>
-                            <constraint firstItem="MWS-hU-8ho" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="64" id="2gD-UY-eFN"/>
                             <constraint firstItem="guM-zO-Ode" firstAttribute="bottom" secondItem="5Ol-5S-oQX" secondAttribute="bottom" id="3LQ-Bj-2a3"/>
                             <constraint firstItem="1zh-YK-BXd" firstAttribute="top" secondItem="vxh-qi-NSp" secondAttribute="top" constant="8" id="3M4-oe-e9U"/>
                             <constraint firstItem="vxh-qi-NSp" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="16" id="5Ry-iB-JDD"/>
@@ -2564,6 +2579,7 @@
                             <constraint firstItem="xTd-mY-Fne" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="16" id="Kpp-d9-ezn"/>
                             <constraint firstItem="n8U-et-XwP" firstAttribute="leading" secondItem="xDs-Ra-HU3" secondAttribute="leading" constant="16" id="N5f-ap-3cz"/>
                             <constraint firstItem="wJ9-iI-z24" firstAttribute="top" secondItem="RZT-vm-tTJ" secondAttribute="top" constant="13" id="PGw-MJ-CYg"/>
+                            <constraint firstItem="rfU-Ch-eRC" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="50" id="PfZ-vp-LKV"/>
                             <constraint firstItem="RZT-vm-tTJ" firstAttribute="top" secondItem="0K4-uJ-HVb" secondAttribute="bottom" constant="12" id="Qrw-y7-uTa"/>
                             <constraint firstAttribute="trailing" secondItem="59o-jA-b21" secondAttribute="trailing" constant="16" id="S9I-7b-EmH"/>
                             <constraint firstAttribute="trailing" secondItem="n8U-et-XwP" secondAttribute="trailing" constant="16" id="Ty9-fF-Ylw"/>
@@ -2571,6 +2587,7 @@
                             <constraint firstItem="vxh-qi-NSp" firstAttribute="top" secondItem="RZT-vm-tTJ" secondAttribute="bottom" constant="12" id="Y4J-dt-HvD"/>
                             <constraint firstItem="0K4-uJ-HVb" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="16" id="YAu-qn-6Sn"/>
                             <constraint firstItem="xTd-mY-Fne" firstAttribute="top" secondItem="vxh-qi-NSp" secondAttribute="bottom" constant="4" id="YRI-oe-W4T"/>
+                            <constraint firstItem="u3l-hG-TM9" firstAttribute="trailing" secondItem="rfU-Ch-eRC" secondAttribute="trailing" constant="50" id="Yzd-24-FVY"/>
                             <constraint firstItem="n8U-et-XwP" firstAttribute="top" secondItem="LqR-10-1Hw" secondAttribute="bottom" constant="16" id="ZEG-oH-0BB"/>
                             <constraint firstItem="u3l-hG-TM9" firstAttribute="trailing" secondItem="MWS-hU-8ho" secondAttribute="trailing" constant="64" id="cM6-U9-rkX"/>
                             <constraint firstItem="Hrs-ff-VJm" firstAttribute="top" secondItem="guM-zO-Ode" secondAttribute="bottom" constant="8" id="d6u-Qy-C1W"/>
@@ -2583,11 +2600,13 @@
                             <constraint firstItem="u3l-hG-TM9" firstAttribute="bottom" secondItem="MWS-hU-8ho" secondAttribute="bottom" constant="16" id="kRy-AM-13M"/>
                             <constraint firstItem="guM-zO-Ode" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="16" id="o6G-fh-Uwh"/>
                             <constraint firstItem="u3l-hG-TM9" firstAttribute="trailing" secondItem="5Ol-5S-oQX" secondAttribute="trailing" constant="16" id="ota-rh-y8f"/>
+                            <constraint firstItem="u3l-hG-TM9" firstAttribute="bottom" secondItem="rfU-Ch-eRC" secondAttribute="bottom" constant="16" id="pyV-k1-AB1"/>
                             <constraint firstItem="LqR-10-1Hw" firstAttribute="top" secondItem="NLs-Sd-Mjm" secondAttribute="bottom" constant="12" id="qEP-Z5-O4f"/>
                             <constraint firstItem="NLs-Sd-Mjm" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="16" id="sCH-TV-Xgx"/>
                             <constraint firstItem="5Ol-5S-oQX" firstAttribute="top" secondItem="guM-zO-Ode" secondAttribute="top" id="tQG-FV-dB0"/>
                             <constraint firstItem="Hrs-ff-VJm" firstAttribute="leading" secondItem="xDs-Ra-HU3" secondAttribute="leading" id="tvn-XC-05Y"/>
                             <constraint firstItem="RZT-vm-tTJ" firstAttribute="leading" secondItem="u3l-hG-TM9" secondAttribute="leading" constant="16" id="urF-tP-A0N"/>
+                            <constraint firstItem="rfU-Ch-eRC" firstAttribute="top" secondItem="n8U-et-XwP" secondAttribute="bottom" constant="16" id="vWN-Ng-6Z2"/>
                             <constraint firstItem="59o-jA-b21" firstAttribute="leading" secondItem="NLs-Sd-Mjm" secondAttribute="trailing" constant="4" id="wzH-8Z-Qij"/>
                             <constraint firstItem="Trh-Dw-WJl" firstAttribute="top" secondItem="Hrs-ff-VJm" secondAttribute="bottom" constant="12" id="xPm-oQ-CdJ"/>
                         </constraints>
@@ -2787,7 +2806,7 @@
                                     <constraint firstAttribute="height" constant="24" id="f7Z-RK-m7p"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="28"/>
-                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="byL-vf-yH3">
